--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="profile">
           <img src="images/circle-cropped (2).png" alt="profile-pic">
           <h2>Hello.</h2>
-          <p class="intro">I am complete a begginer in programming ,this is my first website. </p>
+          <p class="intro">I am a complete beginner in programming ,this is my first website. </p>
         </div>
         <hr>
         <div class="skills">
@@ -31,7 +31,7 @@
           <div class="skill-row">
             <img class="bjjimg" src=https://media.giphy.com/media/nNBSeMcuSA168/giphy.gif alt="bjj">
             <h3>Brazilian jiu jitsu </h3>
-            <p>I started training BJJ back in 2016 ,because i was vert impressed by the 
+            <p>I started training BJJ back in 2016 ,because i was very impressed by the 
               techniques and skills it offers.Over time i menaged to get skills in it 
               ,i lost a lot of weight ,did a few competitions and i love it .
             </p>
