--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               ,i lost a lot of weight ,did a few competitions and i love it .
             </p>
           </div>
-          <div class="skill-row">
+          <div class="skill-row skill-row2">
             <img class="devimg" src=https://media.giphy.com/media/7xghjugSqnFKg/giphy.gif alt="web-development">
             <h3>Programming</h3>
             <p>I started learning how to code back in May 2020,i am a complete begginer 
