--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
         <img class="top-cloud" src="images/cloud.png" alt="cloudimg">
         <img class="bottom-cloud" src="images/cloud.png" alt="cloudimg">
-        <img src="images/mountain.png" alt="mountain">
+        <img class="mountain-img" src="images/mountain.png" alt="mountain">
     </div>
     
     <div class="middle-container">
